tests/sksl/errors/Ossfuzz32156.dsl.glsl
### Compilation failed:

error: expected ']', but found '*'
error: expected a type, but found '3456'
2 errors
